# cpoke

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  bak_Makefile  cffi_exp.py  cffi_exp_cstore_inc.h  compile  config.guess  config.h.in  config.sub  configure  configure.ac  configure.ac~  configure~  cstore.E  depcomp  install-sh  missing  shell.nix
.github/workflows/: main.yml
autom4te.cache/: output.0  output.2  output.3  output.5  requests  traces.1  traces.2  traces.3  traces.5  traces.6
cffi/: cpoke_ffi.py  example.py  example2.py  hack_all_M.py  pokemon.py
cffi/include/: all.E  all.E2  jsmn.E  original_cstore_inc.E  parse_gm.E  pvpoke_ai.E
data/: poketables.db
data/defs/: cpms.def  damage_modifiers.def  ptype_traits.def
data/test/: parse_gm_0.h  parse_gm_1.h  parse_gm_2.h  pdex_0.h  roster.h  test.json
include/: battle.h  bits.h  cstore.h  files.h  filter.h  gm_store.h  hash.h  include.template  iv_rank.h  jsmn.h  json_utils.h  macros.h  moves.h  parse_csv.h  parse_gm.h  player.h  pokedex.h  pokemon.h  ptypes.h  pvp_action.h  store.h  test.h
include/ai/: ai.h  naive_ai.h  pvpoke_ai.h
include/defs/: cpms.h  cstore_template.h  damage_modifiers.h  ptype_traits.h
include/ext/: jsmn_iterator.h
include/util/: bits.h  curl_util.h  encoder.h  enumflags.h  files.h  fnmacros.h  fuzzy.h  jsmn_iterator_stack.h  json_util.h  list.h  macros.h  test.h  test_util.h
ref/: README.md  battle.pp  cstore_data-v1.c  gen_cpms.h  gen_damage_mods.h  ref.template
ref/opencl_ivs/: .gitignore  Makefile  cp_from_stats.cl  main.c
src/: Makefile.am  Makefile.in  ai.c  battle.c  cpms.c  cstore.c  damage_modifiers.c  fetch_gm.c  gm_store.c  iv_store_build.c  main.c  moves.c  naive_ai.c  parse_gm.c  player.c  pokedex.c  pokemon.c  ptype_traits.c  ptypes.c  pvpoke_ai.c  src.template
src/ext/: jsmn_iterator.c
src/test/: test.c  test_battle.c  test_cstore.c  test_filter.c  test_fuzzy.c  test_json.c  test_naive_ai.c  test_parse_gm.c  test_player.c  test_pokemon.c  test_ptypes.c  test_utils.c
src/util/: bits.c  files.c  json_util.c
(+4 files in other folders)
