AM_CFLAGS = -fms-extensions -DJSMN_STATIC -std=gnu11
#AM_CFLAGS += $(shell curl-config --cflags)
#AM_CFLAGS += $(shell pcre-config --cflags)

AM_LDFLAGS = -lm -ldl
#AM_LDFLAGS += $(shell curl-config --libs)
#AM_LDFLAGS += $(shell pcre-config --libs)

bin_PROGRAMS = test parse_gm fetch_gm iv_store_build cpoke
